# ros-cot_pipeline

./: .ament_cpplint  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  fixed.cpp  package.xml
CoT_event/include/: cot_builder.hpp  cot_info.hpp  cot_validator.hpp  cottypeinfo.hpp  detail_builder.hpp  event_builder.hpp  point_block.hpp  sidc_parser.hpp  sidc_validator.hpp  time_formatter.hpp
CoT_event/resources/: valid_types.json
CoT_event/src/: cot_builder.cpp  cot_validator.cpp  detail_builder.cpp  event_builder.cpp  sidc_parser.cpp  sidc_parser.cpp.unc-backup.md5~  sidc_parser.cpp.unc-backup~  sidc_validator.cpp  time_formatter.cpp
CoT_event/test/: main.cpp  test_cot_validator.cpp  test_detail_builder.cpp  test_event_builder.cpp  test_sidc_parser.cpp  test_sidc_validator.cpp  test_time_formatter.cpp
example/: TAK_MINIMAL_BARE.cot
include/cot_pipeline/: cot_builder.hpp  cot_info.hpp  sim_data_publisher.hpp
ros_nodes/include/cot_pipeline/: cot_encoder_node.hpp  processor_node.hpp  target_info.hpp
ros_nodes/src/: cot_encoder_node.cpp  main.cpp  processor_node.cpp  sim_data_publisher.cpp
src/: cot_builder.cpp  cot_encoder_node.cpp  main.cpp  processor_node.cpp  sim_data_publisher.cpp
